<?xml version="1.0"?>
<package format="3">
  <name>hik_camera</name>
  <version>0.0.1</version>
  <description>Hikvision multi-camera ROS2 driver for sentry omnidirectional perception</description>

  <maintainer email="you@example.com">CHEN XIN</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
