<?xml version="1.0"?>
<package format="3">
  <name>sentry_vision</name>
  <version>0.0.1</version>
  <description>Omnidirectional perception for RoboMaster sentry robot</description>

  <maintainer email="you@example.com">CHEN XIN</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sentry_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
